[package]
name = "esp-hal-ota"
version = "0.5.0"
edition = "2024"
license = "MIT"
description = "OTA library for esp-hal"
repository = "https://github.com/filipton/esp-hal-ota"

[lib]

[dependencies]
embedded-storage = "0.3.1"
log = { version = "0.4.29", optional = true }
defmt = { version = "1.0.1", optional = true }

esp32 = { version = "0.40.2", optional = true }

esp32s2 = { version = "0.31.2", optional = true }
esp32s3 = { version = "0.35.2", optional = true }

esp32c2 = { version = "0.29.2", optional = true }
esp32c3 = { version = "0.32.2", optional = true }
esp32c6 = { version = "0.23.2", optional = true }

esp32h2 = { version = "0.19.2", optional = true }

[features]
default = []
log = ["dep:log"]
defmt = ["dep:defmt"]

esp32 = ["dep:esp32"]

esp32s2 = ["dep:esp32s2"]
esp32s3 = ["dep:esp32s3"]

esp32c2 = ["dep:esp32c2"]
esp32c3 = ["dep:esp32c3"]
esp32c6 = ["dep:esp32c6"]

esp32h2 = ["dep:esp32h2"]
