[package]
name = "esp-hal-ota-example"
version = "0.1.0"
authors = ["filipton <filipton12@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.18.0", features = [ "panic-handler", "println" ] }
esp-hal = { version = "1.0.0-rc.1", features = ["unstable"] }
esp-println = { version = "0.16.0", features = ["log-04"] }
log = { version = "0.4.29" }
esp-radio = { version = "0.16.0", features = [ "unstable", "wifi", "ble" ] }
esp-rtos = { version = "0.1.0", features = ["esp-radio", "embassy"] }
embassy-executor = { version = "0.9.1", package = "embassy-executor", features = ["arch-riscv32"] }
embassy-net = { version = "0.7.1", features = ["tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-time = { version = "0.5.0" }
esp-storage = { version = "0.8.0", features = [] }
esp-hal-ota = { path = "../", features = ["log"] }
static_cell = { version = "2.1.1", features = ["nightly"] }
esp-alloc = "0.9.0"
esp-bootloader-esp-idf = { version = "0.3.0", features = ["log-04"] }

[build-dependencies]
dotenvy = "0.15.7"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 2
overflow-checks = false

[features]
default = ["esp32s3"]
esp32s3 = ["esp-backtrace/esp32s3", "esp-hal/esp32s3", "esp-println/esp32s3", "esp-radio/esp32s3", "esp-rtos/esp32s3", "esp-storage/esp32s3", "esp-hal-ota/esp32s3", "esp-bootloader-esp-idf/esp32s3"]
esp32c3 = ["esp-backtrace/esp32c3", "esp-hal/esp32c3", "esp-println/esp32c3", "esp-radio/esp32c3", "esp-rtos/esp32c3", "esp-storage/esp32c3", "esp-hal-ota/esp32c3", "esp-bootloader-esp-idf/esp32c3"]
esp32 = ["esp-backtrace/esp32", "esp-hal/esp32", "esp-println/esp32", "esp-radio/esp32", "esp-rtos/esp32", "esp-storage/esp32", "esp-hal-ota/esp32", "esp-bootloader-esp-idf/esp32"]
